--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
                 <div><h1 class="con">CON</h1> <h1 class="tact">TACT</h1></div>
                 <a href="https://www.instagram.com/f.waggan/" target="_blank" class="instagram">INSTAGRAM</a>
                 <a href="https://www.facebook.com/profile.php?id=100017863985558" target="_blank" class="facebook">FACEBOOK</a>
+                <audio controls autoplay>
+                    <source src="https://tainhacmienphi.biz/get/song/api/403015">
+                  Your browser does not support the audio element.
+                  </audio>
             </div>
         </div>
         
     </div>
+    <script src="./index.js">
+
+    </script>
 </body>
 </html>
