--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <i class="ti-control-play hide"></i>
                     <i class="ti-control-skip-forward"></i>
                 </div>
-                <audio>
+                <audio autoplay>
                     <source src="https://tainhacmienphi.biz/get/song/api/403015">
                   Your browser does not support the audio element.
                   </audio>
