--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <a href="https://www.facebook.com/profile.php?id=100017863985558" target="_blank" class="facebook">FACEBOOK</a>
                 <div class="audio-controll-button">
                     <i class="ti-control-skip-backward"></i>
-                    <i class="ti-control-pause hide"></i>
-                    <i class="ti-control-play"></i>
+                    <i class="ti-control-pause "></i>
+                    <i class="ti-control-play hide"></i>
                     <i class="ti-control-skip-forward"></i>
                 </div>
-                <audio>
+                <audio autoplay>
                     <source src="https://tainhacmienphi.biz/get/song/api/403015">
                   Your browser does not support the audio element.
                   </audio>
