header poster and loop shuffle

--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
                 <div><h1 class="con">CON</h1> <h1 class="tact">TACT</h1></div>
                 <a href="https://www.instagram.com/f.waggan/" target="_blank" class="instagram">INSTAGRAM</a>
                 <a href="https://www.facebook.com/profile.php?id=100017863985558" target="_blank" class="facebook">FACEBOOK</a>
-                <div class="audio-controll-button">
-                    <i class="ti-control-skip-backward"></i>
-                    <i class="ti-control-pause "></i>
-                    <i class="ti-control-play hide"></i>
-                    <i class="ti-control-skip-forward"></i>
+                <div class="audio-zone">
+                    <img src="https://images.genius.com/d64785e525d77073b3001376411ddfa4.1000x1000x1.webp" alt="logo">
+                    <div class="name-controll-zone">
+                        <h5>Shay nắng</h5>
+                        <div class="audio-controll-button">
+                            <i class="ti-control-shuffle"></i>
+                            <i class="ti-control-skip-backward"></i>
+                            <i class="ti-control-pause "></i>
+                            <i class="ti-control-play hide"></i>
+                            <i class="ti-control-skip-forward"></i>
+                            <i class="ti-loop"></i>
+                        </div>
+                    </div>
+                    
                 </div>
+                
                 <audio autoplay>
                     <source src="https://tainhacmienphi.biz/get/song/api/403015">
                   Your browser does not support the audio element.
